# carreira-checkpoint2

./: .codecov.yml  .coveragerc  .dockerignore  .env_examples  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  entrypoint_dev.sh  pyproject.toml  pytest.ini
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: tests.yml
clientes/: admin.py  models.py  serializers.py  urls.py  views.py
clientes/management/commands/: create_groups.py
clientes/migrations/: 0001_initial.py  0002_notas.py  0003_clients_responsavel.py  0004_create_default_groups.py
clientes/tests/: conftest.py  test_authentication.py  test_clients_crud.py  test_filters.py  test_notas.py  test_permissions.py  test_trailing_slash.py
crm_api/: asgi.py  middleware.py  permissions.py  settings.py  urls.py  user_views.py  view.py  wsgi.py
docs/: CODECOV.md  GITHUB_CONTAINER_REGISTRY.md
